[package]
name = "packer"
version = "1.0.0"
edition = "2021"

[dependencies]
image = "0.24"
toml = "0.5"
anyhow = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
ron = "0.8"
nanoid = "0.4"
itertools = "0.10"

[dependencies.euclid]
version = "0.22"
features = ["serde"]

[dependencies.clap]
version = "3.2"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
